# v-ShuLiu_26_01_21case2

./: Claude-Opus-4.5.txt  Claude-sonnet-4.5.txt  README.md  final_prompt.txt  gpt-5.1-codex-max.txt  oswe-large-m5a1s120-low.txt  prompt.txt  pyproject.toml  run_tests.bat
src/fake_useragent_min/: __init__.py  fake.py
src/fake_useragent_min.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_config_requirements.py  test_config_validation.py  test_fake_min.py  test_ruff_config.py  test_tooling_config.py
