[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fake-useragent-min"
version = "0.1.0"
requires-python = ">=3.10"
description = "A minimal project demonstrating user-agent utilities and ruff-based tooling."
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "tomli; python_version < '3.11'"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
include = [
	"src/**/*.py",
	"tests/**/*.py",
	"**/pyproject.toml",
]
src = ["src"]

[tool.ruff.lint]
select = [
	"E",
	"F",
	"W",
	"I",
	"UP",
	"B",
	"C4",
	"SIM",
	"PT",
]
ignore = [
	"B905", # allow zip(strict=False) on Python <3.11
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

